<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

                xmlns:app="http://schemas.android.com/apk/res-auto"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context=".MainActivity">


    <TextView
            android:layout_width="wrap_content"
            android:layout_height="113dp" android:id="@+id/textView" android:layout_alignParentEnd="true"
            android:layout_alignParentStart="true"
            android:layout_marginStart="6dp"
            android:textSize="20sp" android:layout_marginEnd="6dp"
            android:layout_marginTop="57dp" android:layout_alignParentTop="true"/>
    <Button
            android:text="@string/_7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/button7"
            android:layout_alignParentStart="true"
            android:layout_marginStart="10dp" android:layout_marginTop="68dp" android:layout_below="@+id/textView"
            android:onClick="clickListener"/>
    <Button
            android:text="@string/_8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/button8" android:layout_marginTop="68dp"
            android:layout_below="@+id/textView" android:layout_toEndOf="@+id/button7"
            android:layout_marginStart="10dp" android:onClick="clickListener"/>
    <Button
            android:text="@string/_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/button4" android:layout_marginTop="10dp"
            android:layout_below="@+id/button7" android:layout_alignParentStart="true"
            android:layout_marginStart="10dp" android:onClick="clickListener"/>
    <Button
            android:text="@string/_9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/button9" android:layout_marginTop="68dp"
            android:layout_below="@+id/textView" android:layout_toEndOf="@+id/button8"
            android:layout_marginStart="10dp" android:onClick="clickListener"/>
    <Button
            android:text="@string/_Plus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/buttonPlus" android:layout_toEndOf="@+id/button9"
            android:layout_marginStart="10dp" android:layout_marginTop="68dp" android:layout_below="@+id/textView"
            android:layout_alignParentEnd="true" android:layout_marginEnd="10dp" android:onClick="clickListener"/>
    <Button
            android:text="@string/_5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/button5" android:layout_toEndOf="@+id/button4"
            android:layout_marginStart="10dp" android:layout_marginTop="10dp" android:layout_below="@+id/button8"
            android:onClick="clickListener"/>
    <Button
            android:text="@string/_6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/button6" android:layout_marginTop="10dp"
            android:layout_below="@+id/button9" android:layout_toEndOf="@+id/button5"
            android:layout_marginStart="10dp" android:onClick="clickListener"/>

    <Button
            android:text="@string/_Minus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/buttonMinus" android:layout_marginTop="10dp"
            android:layout_below="@+id/buttonPlus" android:layout_toEndOf="@+id/button6"
            android:layout_marginStart="10dp" android:layout_alignParentEnd="true" android:layout_marginEnd="10dp"
            android:onClick="clickListener"/>

    <Button
            android:text="@string/_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/button1" android:layout_marginTop="10dp"
            android:layout_below="@+id/button4" android:layout_alignParentStart="true"
            android:layout_marginStart="10dp" android:onClick="clickListener"/>
    <Button
            android:text="@string/_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/button2" android:layout_marginTop="10dp"
            android:layout_below="@+id/button5" android:layout_toEndOf="@+id/button1"
            android:layout_marginStart="10dp" android:onClick="clickListener"/>
    <Button
            android:text="@string/_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/button3" android:layout_marginTop="10dp"
            android:layout_below="@+id/button6" android:layout_toEndOf="@+id/button2"
            android:layout_marginStart="10dp" android:onClick="clickListener"/>

    <Button
            android:text="@string/_multiply"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/buttonMultiply" android:layout_marginTop="10dp"
            android:layout_below="@+id/buttonMinus" android:layout_toEndOf="@+id/button3"
            android:layout_marginStart="10dp" android:layout_alignParentEnd="true" android:layout_marginEnd="10dp"
            android:onClick="clickListener"/>
    <Button
            android:text="@string/_divide"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/buttonDivide" android:layout_marginTop="10dp"
            android:layout_below="@+id/buttonMultiply"
            android:layout_marginStart="10dp"
            android:layout_alignParentEnd="true" android:layout_marginEnd="10dp" android:onClick="clickListener"
            android:layout_toEndOf="@+id/buttonEqual"/>
    <Button
            android:text="@string/_reset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/buttonReset"
            android:onClick="clickListener" android:layout_marginTop="10dp" android:layout_below="@+id/buttonDivide"
            android:layout_alignParentEnd="true" android:layout_marginEnd="10dp"
            android:layout_marginStart="0dp" android:layout_alignStart="@+id/buttonEqual"/>
    <Button
            android:text="@string/_equal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/buttonEqual"
            android:layout_marginTop="10dp" android:layout_below="@+id/button2"
            android:onClick="clickListener" android:layout_toEndOf="@+id/buttonDecimal" android:layout_marginStart="10dp"/>
    <Button
            android:text="@string/_decimal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/buttonDecimal"
            android:layout_marginTop="10dp" android:layout_below="@+id/button2"
            android:onClick="clickListener" android:layout_toEndOf="@+id/button0" android:layout_marginStart="10dp"/>
    <Button
            android:text="@string/_0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/button0" android:layout_marginTop="10dp"
            android:layout_below="@+id/button1" android:layout_alignParentStart="true"
            android:layout_marginStart="10dp" android:onClick="clickListener"/>
    <ImageView
            android:layout_width="265dp"
            android:layout_height="141dp" app:srcCompat="@drawable/untitled" android:id="@+id/imageView"
            android:layout_marginTop="69dp" android:layout_below="@+id/buttonDecimal"
            android:layout_alignParentStart="true"
            android:layout_marginStart="3dp" android:contentDescription="@string/todo"/>


</RelativeLayout>